# HW_sem_IV

./: README.md
4sem_client/: CMakeLists.txt  config
4sem_client/documentation/html/: annotated.html  classes.html  classreg-members.html  classreg.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  reg_8h.html  reg_8h__dep__incl.map  reg_8h__dep__incl.md5  reg_8h_source.html  structcompany-members.html  structcompany.html  task_8h.html  task_8h__incl.map  task_8h__incl.md5  task_8h_source.html
4sem_client/documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+7 more)
4sem_client/documentation/latex/: annotated.tex  classreg.tex  files.tex  refman.tex  reg_8h.tex  reg_8h__dep__incl.md5  structcompany.tex  task_8h.tex  task_8h__incl.md5
4sem_client/inc/: reg.h  task.h
4sem_client/src/: client.cpp  reg.cpp  server2.cpp  task.cpp
4sem_train_test2/task/: CMakeLists.txt  config  mainpage.dox
4sem_train_test2/task/build_task/: CMakeCache.txt  Makefile  cmake_install.cmake  server
4sem_train_test2/task/inc/: Hash.h  generator.h  myjson.h  reg.h  restaraunt.h
4sem_train_test2/task/src/: client.cpp  generator.cpp  main.cpp  myjson.cpp  reg.cpp  restaraunt.cpp  server.cpp
(+185 files in other folders)
